Bug #123104 --> clear out the number of new messages when a folder no longer has new messages. r=naving sr=bienvenu